--- a/README.textile
+++ b/README.textile
@@ -13,7 +13,7 @@ Klonen Sie das Übungs-Repository, lösen Sie das Problem und checken die Lösun
 
 Ein erfolgreicher Aufruf sieht wie folgt aus:
 
- spec binary_tree_spec.rb 
+.pre spec binary_tree_spec.rb 
  .
  
  Finished in 0.00633 seconds
